--- a/src/views/crud.ejs
+++ b/src/views/crud.ejs
@@ -34,11 +34,11 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                       <label for="inputEmail4">First name</label>
-                      <input type="email" class="form-control" placeholder="First name" name="firstName">
+                      <input type="text" class="form-control" placeholder="First name" name="firstName">
                     </div>
                     <div class="form-group col-md-6">
                       <label for="inputPassword4">Last name</label>
-                      <input type="password" class="form-control" name="lastName" placeholder="Last name">
+                      <input type="text" class="form-control" name="lastName" placeholder="Last name">
                     </div>
                   </div>
                 <div class="form-group">
